@@ -6,6 +6,7 @@
 	  both the 2 and 3 versions of this library.
 	* Added: Property\DateTime::hasTime().
 	* Added: Property\MultiDateTime::hasTime().
+	* Added: Property::getValue().
 
 
 2.0.7-stable (2013-03-05)
